# smapo_ros2

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  README_EN.md  docker-compose.gpu.yml  docker-compose.yml  main.py  main_gpu.py  manage.py  requirements.txt  training_run.py
backend_django/: asgi.py  settings.py  urls.py  views.py  wsgi.py
env/: SMAPO.py  create_env.py  custom_maps.py  maps.yaml  maps_3d.yaml  planning.py  random.yaml  replan.py  street_map.yaml  wrappers.py
learning/: encoder_residual.py  learning_config.py  ppo.py  utils_common.py
planner/LB_A/: .rendered.planner.cpp  planner.cpp  planner.h
planner/Static_A/: .rendered.planner.cpp  planner.h
planning/: __init__.py  replan_algo.py
pogema/: envs.py  generator.py  grid.py  grid_config.py
ros2_ws/src/smapo_multi_agent_planner/: CMakeLists.txt  package.xml
ros2_ws/src/smapo_multi_agent_planner/include/smapo_multi_agent_planner/: planner_core.hpp  realtime_monitor.hpp  task_scheduler.hpp
ros2_ws/src/smapo_multi_agent_planner/src/: multi_agent_planner_node.cpp  planner_core.cpp  realtime_monitor.cpp  task_scheduler.cpp
ros2_ws/src/smapo_multi_agent_planner/test/: test_planner_core.cpp  test_realtime_monitor.cpp  test_task_scheduler.cpp
sample_factory/: run_algorithm.py
sample_factory/algorithms/: algorithm.py
sample_factory/envs/: create_env.py  env_registry.py  env_wrappers.py  ray_envs.py
scripts/: eval_checkpoint.py  run_gpu_one_click.sh  smoke_2p5d_training_paths.py  smoke_native_3d_maps.py  smoke_octomap_asset.py  smoke_pyoctomap_env.py  verify_gpu.py
test_code/: formal_test_maze.py  formal_test_pico.py  formal_test_random.py  formal_test_street.py
utils/: gs2dict.py  run_all.py  terminal_logging.py  training_tools.py
web_demo/: __init__.py  inference.py  server.py  task_runtime.py
web_frontend/: index.html  package-lock.json  package.json  vite.config.js
web_frontend_ge/: index.html  package-lock.json  package.json
(+49 files in other folders)
